--- a/doc/source/_static/css/custom.css
+++ b/doc/source/_static/css/custom.css
@@ -83,9 +83,15 @@ img.horizontal-scroll {
 
 .clear-both {
     clear: both;
+    min-height: 100px;
 }
 
 .buttons-float-left {
     width: 150px;
     float: left;
+}
+
+.buttons-float-right {
+    width: 150px;
+    float: right;
 }
