--- a/python/ray/widgets/templates/context.html.j2
+++ b/python/ray/widgets/templates/context.html.j2
@@ -31,12 +31,7 @@
                 <td style="text-align: left"><b>Ray version:</b></td>
                 <td style="text-align: left"><b> {{ ray_version }}</b></td>
             </tr>
-        {% if dashboard_url %}
-            <tr>
-                <td style="text-align: left"><b>Dashboard:</b></td>
-                <td style="text-align: left"><b><a href="{{ dashboard_url }}" target="_blank">{{ dashboard_url }}</a></b></td>
-            </tr>
-        {% endif %}
+            {{ dashboard_row }}
         </table>
     </div>
 </div>
